[package]
name = "whitenoise"
version = "0.1.0"
description = "A secure messenger built on MLS and Nostr"
authors = ["White Noise Authors"]
edition = "2024"
rust-version = "1.90.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "whitenoise"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
async-trait = "0.1.88"
base64 = "0.22"
blurhash = "0.2.3"
chacha20poly1305 = "0.10"
chrono = { version = "0.4.40", features = ["serde"] }
clap = "4.5.37"
dashmap = "6.1"
hex = "0.4"
image = "0.24"
infer = "0.19"
keyring = { version = "3.6", features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }
lightning-invoice = "0.33.1"

mdk-core = { version = "0.5.1", git = "https://github.com/parres-hq/mdk", rev = "f46875ec6fbe1cd616e9dfb4d2aa10f56044e58c", features = [
    "mip04",
] }
mdk-sqlite-storage = { version = "0.5.1", git = "https://github.com/parres-hq/mdk", rev = "f46875ec6fbe1cd616e9dfb4d2aa10f56044e58c" }

nwc = "0.43"
nostr-blossom = "0.43"
nostr-sdk = { version = "0.43", features = [
    "lmdb",
    "nip04",
    "nip44",
    "nip47",
    "nip59",
] }

# LOCAL MDK FOR DEVELOPMENT
# mdk-core = { version = "0.5.1", path="../mdk/crates/mdk-core" }
# mdk-sqlite-storage = { version = "0.5.1", path="../mdk/crates/mdk-sqlite-storage" }

# LOCAL RUST_NOSTR FOR DEVELOPMENT
# nwc = { version = "0.43", path="../rust-nostr/crates/nwc" }
# nostr-blossom = { version = "0.43", path="../rust-nostr/rfs/nostr-blossom" }
# nostr-sdk = { version = "0.43", path="../rust-nostr/crates/nostr-sdk", features = [
#     "lmdb",
#     "nip04",
#     "nip44",
#     "nip47",
#     "nip59",
# ] }

petname = "2.0.2"
rand = "0.9"
reqwest = { version = "0.11", features = [
    "multipart",
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
    "chrono",
    "derive",
    "json",
] }
thiserror = "2.0.12"
tokio = { version = "1.44", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }
base64ct = "=1.7.3"
dotenvy = "0.15"
tempfile = "3.19.1"
indicatif = { version = "0.18.3", optional = true }

[dev-dependencies]
mockito = "1.2"

[features]
default = []
# Feature flag for integration tests - enables IDE support without including in production
# Also enables insecure-local-signer for testing account creation and login
integration-tests = ["insecure-local-signer"]
# Feature flag for performance benchmarks - depends on integration-tests to reuse infrastructure
benchmark-tests = ["integration-tests", "indicatif"]
# Feature flag for local key storage - INSECURE, disabled by default
# On Android, use Amber signer instead. Enable only for development/testing.
insecure-local-signer = []

# Android-specific dependencies for Amber signer (NIP-55)
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[[bin]]
name = "integration_test"
path = "src/bin/integration_test.rs"
required-features = ["integration-tests"]

[[bin]]
name = "benchmark_test"
path = "src/bin/benchmark_test.rs"
required-features = ["benchmark-tests"]

[profile.release]
debug = false
opt-level = "z"
lto = true
codegen-units = 1
strip = true
